--- a/src/Components/locales/ar/translation.json
+++ b/src/Components/locales/ar/translation.json
@@ -23,6 +23,10 @@
         "women": "حريمي",
         "boys": "شبابي",
         "girls": "بناتي",
+        "menCategory":"قسم الرجال",
+        "womenCategory":"قسم النساء",
+        "boysCategory":"قسم الشباب",
+        "girlsCategory":"قسم البنات",
         "tShirts": "قمصان",
         "pants": "بناطيل",
         "shoes": "احذية",
