--- a/src/Components/locales/en/translation.json
+++ b/src/Components/locales/en/translation.json
@@ -23,6 +23,10 @@
         "women": "Women",
         "boys": "Boys",
         "girls": "Girls",
+        "menCategory":"Men Category",
+        "womenCategory":"Women Category",
+        "boysCategory":"Boys Category",
+        "girlsCategory":"Girls Category",
         "tShirts": "T-Shirts",
         "pants": "Pants",
         "shoes": "Shoes",
