--- a/src/Components/locales/en/translation.json
+++ b/src/Components/locales/en/translation.json
@@ -58,7 +58,7 @@
     "favoritesPage": {
         "favoritesTitle": "Favorites",
         "deleteBtn": "Delete All",
-        "noDataYet": "No favorites yet.",
+        "noDataYet": "No product found",
         "confirmDeleteAll": "Are you sure you want to delete all products from your favorites?",
         "noProductsToDelete": "No products to delete !"
     }
