Working on CartPage

--- a/src/Components/locales/ar/translation.json
+++ b/src/Components/locales/ar/translation.json
@@ -51,7 +51,8 @@
         "brand": "الماركة",
         "price": "السعر",
         "color": "اللون",
-        "review": "قييم المنتج"
+        "review": "قييم المنتج",
+        "selectBothMessage": "الرجاء تحديد اللون والمقاس."
     },
     
     "favoritesPage": {
